--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,7 +1,11 @@
 {
   "recommendations": [
-    
     "nrwl.angular-console",
-    "esbenp.prettier-vscode"
+    "esbenp.prettier-vscode",
+    "dbaeumer.vscode-eslint",
+    "firsttris.vscode-jest-runner",
+    "bradlc.vscode-tailwindcss",
+    "Prisma.prisma",
+    "csstools.postcss"
   ]
 }
