--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "devDependencies": {
     "@nrwl/cypress": "15.4.5",
+    "@nrwl/esbuild": "^15.5.0",
     "@nrwl/eslint-plugin-nx": "15.4.5",
     "@nrwl/jest": "15.4.5",
     "@nrwl/js": "15.4.5",
@@ -14,10 +15,14 @@
     "@nrwl/nx-cloud": "latest",
     "@nrwl/react": "15.4.5",
     "@nrwl/vite": "15.4.5",
+    "@nrwl/webpack": "15.4.5",
     "@nrwl/workspace": "15.4.5",
+    "@swc/cli": "~0.1.55",
+    "@swc/core": "^1.2.173",
+    "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "18.7.1",
+    "@types/node": "16.11.7",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
@@ -28,6 +33,7 @@
     "@vitest/ui": "^0.25.8",
     "autoprefixer": "10.4.13",
     "cypress": "^11.0.0",
+    "esbuild": "^0.15.7",
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
@@ -39,6 +45,7 @@
     "jest-environment-jsdom": "28.1.1",
     "jsdom": "~20.0.3",
     "nx": "15.4.5",
+    "pino-pretty": "^9.1.1",
     "postcss": "8.4.19",
     "prettier": "^2.6.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
@@ -48,15 +55,22 @@
     "ts-node": "10.9.1",
     "typescript": "~4.8.2",
     "vite": "^4.0.1",
+    "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
     "vite-tsconfig-paths": "^4.0.2",
     "vitest": "^0.25.8"
   },
   "dependencies": {
+    "@fastify/type-provider-typebox": "^2.4.0",
+    "@sinclair/typebox": "^0.25.20",
+    "@swc/helpers": "~0.4.11",
     "fastify": "^4.11.0",
+    "pino": "^8.8.0",
+    "pino-caller": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3",
+    "swc-loader": "^0.2.3",
     "tslib": "^2.3.0"
   }
 }
