--- a/package.json
+++ b/package.json
@@ -7,36 +7,37 @@
   "devDependencies": {
     "@nrwl/cypress": "15.4.5",
     "@nrwl/esbuild": "^15.5.0",
-    "@nrwl/eslint-plugin-nx": "15.4.5",
+    "@nrwl/eslint-plugin-nx": "15.5.2",
     "@nrwl/jest": "15.4.5",
     "@nrwl/js": "15.4.5",
     "@nrwl/linter": "15.4.5",
     "@nrwl/node": "15.4.5",
-    "@nrwl/nx-cloud": "latest",
+    "@nrwl/nx-cloud": "^15.0.2",
     "@nrwl/react": "15.4.5",
     "@nrwl/vite": "15.4.5",
     "@nrwl/webpack": "15.4.5",
     "@nrwl/workspace": "15.4.5",
-    "@swc/cli": "~0.1.55",
-    "@swc/core": "^1.2.173",
+    "@swc/cli": "~0.1.59",
+    "@swc/core": "^1.3.26",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
-    "@types/node": "16.11.7",
+    "@types/lodash": "^4.14.191",
+    "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
     "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.36.1",
-    "@typescript-eslint/parser": "^5.36.1",
-    "@vitejs/plugin-react": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/parser": "^5.48.2",
+    "@vitejs/plugin-react": "^3.0.1",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
     "autoprefixer": "10.4.13",
-    "cypress": "^11.0.0",
-    "esbuild": "^0.15.7",
-    "eslint": "~8.15.0",
+    "cypress": "^11.2.0",
+    "esbuild": "^0.15.18",
+    "eslint": "~8.32.0",
     "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
+    "eslint-plugin-cypress": "^2.12.1",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jsx-a11y": "6.6.1",
     "eslint-plugin-react": "7.31.11",
@@ -47,30 +48,36 @@
     "nx": "15.4.5",
     "pino-pretty": "^9.1.1",
     "postcss": "8.4.19",
-    "prettier": "^2.6.2",
+    "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.2",
-    "vite": "^4.0.1",
+    "type-fest": "^3.5.3",
+    "typescript": "~4.9.4",
+    "vite": "^4.0.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.2",
+    "vite-tsconfig-paths": "^4.0.3",
     "vitest": "^0.25.8"
   },
   "dependencies": {
     "@fastify/type-provider-typebox": "^2.4.0",
     "@sinclair/typebox": "^0.25.20",
-    "@swc/helpers": "~0.4.11",
+    "@swc/helpers": "~0.4.14",
+    "@trpc/client": "^10.9.0",
+    "@trpc/server": "^10.9.0",
     "fastify": "^4.11.0",
+    "lodash": "^4.17.21",
     "pino": "^8.8.0",
     "pino-caller": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.4.3",
+    "superjson": "^1.12.2",
     "swc-loader": "^0.2.3",
-    "tslib": "^2.3.0"
+    "tslib": "^2.4.1",
+    "zod": "^3.20.2"
   }
 }
