infer error types from status layer

--- a/package.json
+++ b/package.json
@@ -69,11 +69,14 @@
     "@trpc/client": "^10.9.0",
     "@trpc/server": "^10.9.0",
     "fastify": "^4.11.0",
+    "i18next": "^22.4.9",
+    "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
     "pino": "^8.8.0",
     "pino-caller": "^3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-i18next": "^12.1.4",
     "react-router-dom": "6.4.3",
     "superjson": "^1.12.2",
     "swc-loader": "^0.2.3",
