--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "postcss": "8.4.19",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1",
+    "prisma": "^4.9.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.2.4",
     "ts-jest": "28.0.5",
