--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@tw/api": ["libs/api/src/index.ts"],
+      "@tw/prisma": ["libs/prisma/src/index.ts"],
       "@tw/server": ["apps/server/src"]
     },
     "strictNullChecks": true,
