--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "devDependencies": {
     "@nrwl/cypress": "15.4.5",
-    "@nrwl/esbuild": "^15.5.0",
+    "@nrwl/esbuild": "^15.6.3",
     "@nrwl/eslint-plugin-nx": "15.5.2",
     "@nrwl/jest": "15.4.5",
     "@nrwl/js": "15.4.5",
@@ -18,7 +18,7 @@
     "@nrwl/webpack": "15.4.5",
     "@nrwl/workspace": "15.4.5",
     "@swc/cli": "~0.1.59",
-    "@swc/core": "^1.3.26",
+    "@swc/core": "^1.3.30",
     "@swc/jest": "0.2.20",
     "@testing-library/react": "13.4.0",
     "@types/jest": "28.1.1",
@@ -26,9 +26,8 @@
     "@types/node": "18.7.1",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.9",
-    "@types/react-router-dom": "5.3.3",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
-    "@typescript-eslint/parser": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^5.49.0",
+    "@typescript-eslint/parser": "^5.49.0",
     "@vitejs/plugin-react": "^3.0.1",
     "@vitest/coverage-c8": "~0.25.8",
     "@vitest/ui": "^0.25.8",
@@ -48,8 +47,8 @@
     "nx": "15.4.5",
     "pino-pretty": "^9.1.1",
     "postcss": "8.4.19",
-    "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.2.1",
+    "prettier": "^2.8.3",
+    "prettier-plugin-tailwindcss": "^0.2.2",
     "prisma": "^4.9.0",
     "react-test-renderer": "18.2.0",
     "tailwindcss": "3.2.4",
@@ -60,16 +59,24 @@
     "vite": "^4.0.4",
     "vite-plugin-dts": "~1.7.1",
     "vite-plugin-eslint": "^1.8.1",
-    "vite-tsconfig-paths": "^4.0.3",
-    "vitest": "^0.25.8"
+    "vite-tsconfig-paths": "^4.0.5",
+    "vitest": "^0.25.8",
+    "zod-prisma-types": "1.6.8"
   },
   "dependencies": {
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/helmet": "^10.1.0",
+    "@fastify/redis": "^6.1.0",
     "@fastify/type-provider-typebox": "^2.4.0",
-    "@sinclair/typebox": "^0.25.20",
+    "@prisma/client": "^4.9.0",
+    "@reduxjs/toolkit": "^1.9.2",
+    "@sinclair/typebox": "^0.25.21",
     "@swc/helpers": "~0.4.14",
     "@trpc/client": "^10.9.0",
     "@trpc/server": "^10.9.0",
-    "fastify": "^4.11.0",
+    "antd": "^5.1.6",
+    "fastify": "^4.12.0",
+    "googleapis": "^110.0.0",
     "i18next": "^22.4.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "lodash": "^4.17.21",
@@ -78,10 +85,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-i18next": "^12.1.4",
-    "react-router-dom": "6.4.3",
+    "react-redux": "^8.0.5",
+    "react-router": "6.8.0",
+    "react-router-dom": "^6.8.0",
     "superjson": "^1.12.2",
     "swc-loader": "^0.2.3",
-    "tslib": "^2.4.1",
+    "tslib": "^2.5.0",
     "zod": "^3.20.2"
   }
 }
