--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -8,8 +8,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "importHelpers": true,
-    "target": "es2022",
-    "module": "esnext",
+    "target": "ES2022",
+    "module": "ESNext",
     "lib": ["es2022", "dom"],
     "skipLibCheck": true,
     "skipDefaultLibCheck": true,
